# python_bot

./: .env  pyproject.toml
app/src/: bot_instance.py  configs.py  main.py
app/src/infrastructure/: cache.py  database.py  gateways.py  state.py
app/src/infrastructure/migrations/: models.py
